fixed share button bottom cut off

--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -50,12 +50,8 @@
 }
 
 .menuShare {
-  background: rgba(66, 72, 83, 0.5);
-  padding:12px ;
-  height:30px;
-  width: 30px;
-  margin-bottom: 20px;
-  border-radius: 0 0 50px 50px;
+  height:54px;
+  width: 54px;
   
 }
 
